--- a/pictures.html
+++ b/pictures.html
@@ -23,12 +23,12 @@
                 <p>
                     <table border="1" width="260">
                         <tr>
-                            <td><img src="images/1.jpg" width="130" height="100" style="display: block; margin: 0 auto;"></td>
-                            <td><img src="images/2.jpg" width="130" height="100" style="display: block; margin: 0 auto;"></td>
+                            <td><img src="1.jpg" width="130" height="100" style="display: block; margin: 0 auto;"></td>
+                            <td><img src="2.jpg" width="130" height="100" style="display: block; margin: 0 auto;"></td>
                         </tr>
                         <tr>
-                            <td><img src="images/3.jpg" width="130" height="100" style="display: block; margin: 0 auto;"></td>
-                            <td><img src="images/4.jpg" width="130" height="100" style="display: block; margin: 0 auto;"></td>
+                            <td><img src="3.jpg" width="130" height="100" style="display: block; margin: 0 auto;"></td>
+                            <td><img src="4.jpg" width="130" height="100" style="display: block; margin: 0 auto;"></td>
                         </tr>
                     </table>
                     <br>
